[gd_scene load_steps=13 format=2]

[ext_resource path="res://Gameplay Scenes/DungeonScripts/Happy_Cyclops.gd" type="Script" id=1]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_8.png" type="Texture" id=3]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_7.png" type="Texture" id=6]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Dungeon/SetPieces/Entities/HappyCyclops/HC_1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0259

[sub_resource type="CircleShape2D" id=3]
radius = 16.034

[node name="Happy_Cyclops" type="KinematicBody2D"]
collision_mask = 300
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 7
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Change_Direction" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="Player_Detect" type="Area2D" parent="."]
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detect"]
shape = SubResource( 3 )
[connection signal="timeout" from="Change_Direction" to="." method="_on_Change_Direction_timeout"]
[connection signal="body_shape_entered" from="Player_Detect" to="." method="_on_Player_Detect_body_shape_entered"]
